<resources>
    <string name="app_name" translatable="false">Tinsimu ta Vakriste</string>
    <string name="title_activity_main_menu">Hinário</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lblTv" translatable="false">Tinsimu ta Vakriste</string>
    <string name="lbl_tv_tsonga" translatable="false">TV Tsonga</string>
    <string name="lbl_tv_rhonga" translatable="false">TV Rhonga</string>
    <string name="lblCantemos" translatable="false">Cantemos</string>
    <string name="lblXilombe" translatable="false">Xilombe</string>
    <string name="lblSPJ" translatable="false">SPJ</string>
    <string name="lblFavoritos">Hinos Favoritos</string>
    <string name="lblSettings">Definições</string>
    <string name="lblEdominical">Escola Dominical</string>
    <string name="lblConcurso">Concursos</string>
    <string name="lblHinarios">Livros</string>
    <string name="lblTitle">Título</string>
    <string name="lblComposer">Compositor</string>
    <string name="lblPesquisar">Pesquisar</string>
    <string name="lblSongs">Canções</string>
    <string name="lbl_of">de</string>

    <string name="title_activity_splash_screen" translatable="false">SplashScreen</string>
    <string name="lblCopyRight" translatable="false">SCN Tech</string>
    <string name="title_activity_spjlist_song" translatable="false">SPJListSong</string>
    <string name="lblConcursoSPJ">Concurso da Juventude</string>
    <string name="lblQuarteto">Duplo Quarteto</string>
    <string name="lblJuventude">Juventude</string>
    <string name="lblActivista">Activistas</string>
    <string name="lblMamanas">Senhoras</string>
    <string name="lblMadodana">Homens</string>
    <string name="lblCoro">Grupo Coral</string>
    <string name="lblCategoria">Categoria</string>
    <string name="lblAbout">Sobre</string>
    <string name="lblVersion">Versão</string>
    <string name="lblReportError">Reportar Erro</string>
    <string name="msg_choose_email_provider">Escolha um provedor de email</string>
    <string name="lblContacts">Contactos</string>
    <string name="lblDeveloper">Programador:</string>
    <string name="lblOccupation">Ocupação:</string>
    <string name="lblChurch">Igreja:</string>
    <string name="lblPresbiterian">Igreja Presbiteriana de Moçambique</string>
    <string name="lblConductor">Maestro e Compositor</string>
    <string name="lblFerramentas">Ferramentas</string>
    <string name="lblRights">Direitos Autorais "\u00a9" 2019 Todos os Direitos Reservados</string>
    <string name="title_activity_settings">Definições</string>
    <string name="lbl_general">Geral</string>
    <string name="lbl_change_language">Idioma</string>
    <string name="lbl_darkmode">Modo Escuro</string>
    <string name="lbl_lyric_size">Tamanho da Fonte</string>
    <string name="lbl_lyric_style">Font Style</string>
    <string name="lblDonate">Donativo</string>
    <string name="lbl_favorite_songs">Canções Favoritas</string>
    <string name="lbl_privacy_police"><u>Política de Privacidade</u></string>
    <string name="lblPrivacy_policy">Política de Privacidade</string>
    <string name="str_muito_pequeno">Muito Pequeno</string>
    <string name="str_pequeno">Pequeno</string>
    <string name="str_medio">Médio</string>
    <string name="str_maior">Maior</string>
    <string name="str_muito_maior">Muito Maior</string>
    <string name="lbl_language">Definições de Idioma</string>
    <string name="lbl_text">Definições de Texto</string>
    <string name="lbl_other">Outras Definições</string>

    <string name="str_portuguese">Português</string>
    <string name="str_english">Inglês</string>
    <string name="lbl_donation">Faça uma doação para ajudar a manter esse projecto.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_all_songs">Todos Hinos</string>
    <string name="title_by_category">Categorias</string>
    <string name="lbl_change_book">Livro Principal</string>


    <string-array name="language_entries">
        <item>@string/str_portuguese</item>
        <item>@string/str_english</item>
        <!--   <item>Ronga</item>
        <item>Changana</item>-->
    </string-array>

    <string-array name="language_values">
        <item>pt</item>
        <item>en</item>
        <!--       <item>rg</item>
        <item>ch</item>-->
    </string-array>

    <string-array name="book_entries">
        <item>@string/lblCantemos</item>
        <item>@string/lbl_tv_rhonga</item>
        <item>@string/lbl_tv_tsonga</item>
    </string-array>

    <string-array name="book_values">
        <item>ct</item>
        <item>tv_rg</item>
        <item>tv_tg</item>
    </string-array>

    <string-array name="lyric_size_entries">
        <item>@string/str_muito_pequeno</item>
        <item>@string/str_pequeno</item>
        <item>@string/str_medio</item>
        <item>@string/str_maior</item>
        <item>@string/str_muito_maior</item>
    </string-array>

    <string-array name="lyric_size_values">
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string-array name="lyric_style_entries">
        <item>Allura</item>
        <item>Monospace</item>
        <item>Norwester</item>
        <item>Playfair</item>
        <item>Roboto</item>
        <item>Sans Serif</item>
        <item>Shrikhand</item>
        <item>Spectral</item>
    </string-array>

    <string-array name="lyric_style_values">
        <item>Allura</item>
        <item>Monospace</item>
        <item>Norwester</item>
        <item>Playfair</item>
        <item>Roboto</item>
        <item>Sans Serif</item>
        <item>Shrikhand</item>
        <item>Spectral</item>
    </string-array>

    <string name="lblBook">Livro</string>
    <string name="prompt_back_pressed">Pressione novamente para sair</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_teste">Teste</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_go_to_page">Ir ao Hino</string>
    <string name="lbl_cancel">CANCELAR</string>
    <string name="lbl_enter_song_number">Introduza o número da canção</string>
</resources>
