<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/lblHinarios">
        <menu>
            <item
                android:id="@+id/nav_tv_rg"
                android:icon="@drawable/tinsimu_red1"
                android:title="Tinsimu Ta Vakriste (Ronga)" />

            <item
                android:id="@+id/nav_tv_tg"
                android:icon="@drawable/tinsimu_red1"
                android:title="Tinsimu Ta Vakriste (Tsonga)" />
            <item
                android:id="@+id/nav_cantemos"
                android:icon="@drawable/cantemos_c1"
                android:title="@string/lblCantemos" />
        </menu>
    </item>

    <item android:title="@string/lblFerramentas">
        <menu>
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/favorite_white_36dp"
                android:title="@string/lblFavoritos"
                android:visible="true" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/lblSettings"
                android:visible="true" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_help_black_48dp"
                android:title="@string/lblAbout" />
        </menu>
    </item>

</menu>
